--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dart_openai: ^5.1.0
   chat_gpt_sdk: ^3.1.5
   flutter_local_notifications: ^19.1.0
+  share_plus: ^11.0.0
 
 
   
