--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   chat_gpt_sdk: ^3.1.5
   flutter_local_notifications: ^19.1.0
   share_plus: ^11.0.0
+  uuid: ^4.5.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
+  permission_handler: ^12.0.0+1
 
 
   
@@ -53,4 +57,5 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/app_icon.png"
+  image_path: "assets/images/app_icon_image.png"
+  adaptive_icon_foreground: "assets/images/app_icon_image.png"
